Creacion de packages DTO y Repository. Implementacion de @Entity en los objetos y relaciones SQL. Cambio de fechas de tipo String a Date (SQL) y hora de tipo string a Time(SQL). Todo el package Dao medio roto jaja salu2.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
+#Setup de Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+#Setup de JDBC
+spring.datasource.url=jdbc:h2:mem:turnos
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Setup de H2
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
