--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 #Setup de JDBC
-spring.datasource.url=jdbc:h2:mem:turnos
+spring.datasource.url=jdbc:h2:~/clinica
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -11,6 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #Setup de H2
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
